[package]
name = "rust-text-to-speech"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
jsonwebtoken = "10"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
